RESOLVED FIXED222257
Fix warning after r273225
https://bugs.webkit.org/show_bug.cgi?id=222257
Summary Fix warning after r273225
Lauro Moura
Reported 2021-02-21 17:57:33 PST
Fix warning after r273225
Attachments
Patch (1.63 KB, patch)
2021-02-21 17:58 PST, Lauro Moura
no flags
Lauro Moura
Comment 1 2021-02-21 17:58:39 PST
Keith Miller
Comment 2 2021-02-21 19:17:32 PST
hmm, I feel like that would be an ok condition for a -WError :P
EWS
Comment 3 2021-02-21 21:20:47 PST
Committed r273229: <https://commits.webkit.org/r273229> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421164 [details].
Radar WebKit Bug Importer
Comment 4 2021-02-21 21:21:14 PST
Note You need to log in before you can comment on or make changes to this bug.