Fix warning after r273225 https://bugs.webkit.org/show_bug.cgi?id=222257

Reviewed by Keith Miller.

The UNLIKELY condition raises a warn with "suggest parentheses around
‘&&’ within ‘||’" for the last pair.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseUnaryExpression):


Canonical link: https://commits.webkit.org/234415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273229 268f45cc-cd09-0410-ab3c-d52691b4dbfc